<resources>
    <string name="app_name">TrophyTeam</string>

    <!-- Login Page -->
    <string name="title_login"><b>Login</b></string>
    <string name="hint_userID">User ID</string>
    <string name="hint_password">Password</string>
    <string name="link_forgot_password">Forgot Password?</string>
    <string name="link_forgot_userID">Forgot UserID?</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>

    <!-- Register Page -->
    <string name="title_registration"><b>Registration</b></string>
    <string name="title_email">Email</string>
    <string name="title_userID">User ID</string>
    <string name="title_password">Password</string>
    <string name="title_confirm_password">Confirm Password</string>
    <string name="button_submit">Submit</string>
    <string name="link_login">Already have an account?</string>

    <!-- Primary Menu -->
    <string name="action_home">Home</string>
    <string name="action_search">Search</string>
    <string name="action_account">My Account</string>
    <string name="action_add_exercise">Add Exercise</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <!-- Times -->
    <string-array name="array_times_0_to_59">
        <item>0</item>
        <item>1</item><item>2</item><item>3</item><item>4</item><item>5</item>
        <item>6</item><item>7</item><item>8</item><item>9</item><item>10</item>
        <item>11</item><item>12</item><item>13</item><item>14</item><item>15</item>
        <item>16</item><item>17</item><item>18</item><item>19</item><item>20</item>
        <item>21</item><item>22</item><item>23</item><item>24</item><item>25</item>
        <item>26</item><item>27</item><item>28</item><item>29</item><item>30</item>
        <item>31</item><item>32</item><item>33</item><item>34</item><item>35</item>
        <item>36</item><item>37</item><item>38</item><item>39</item><item>40</item>
        <item>41</item><item>42</item><item>43</item><item>44</item><item>45</item>
        <item>46</item><item>47</item><item>48</item><item>49</item><item>50</item>
        <item>51</item><item>52</item><item>53</item><item>54</item><item>55</item>
        <item>56</item><item>57</item><item>58</item><item>59</item>
    </string-array>
    <string-array name="array_times_0_23">
        <item>0</item>
        <item>1</item><item>2</item><item>3</item><item>4</item><item>5</item>
        <item>6</item><item>7</item><item>8</item><item>9</item><item>10</item>
        <item>11</item><item>12</item><item>13</item><item>14</item><item>15</item>
        <item>16</item><item>17</item><item>18</item><item>19</item><item>20</item>
        <item>21</item><item>22</item><item>23</item>
    </string-array>

    <!-- Cardio -->
    <string-array name="array_exercise_types_cardio">
        <item>--  --</item>
        <item>Running</item>
        <item>Swimming</item>
    </string-array>
    <string name="exercise_add_exercise_cardio"><b>Add Cardio Exercise</b></string>
    <string name="exercise_cardio_running">Running</string>
    <string name="exercise_cardio_swimming">Swimming</string>
    <string-array name="array_running_exercises">
        <item>--  --</item>
        <item>Walking</item>
        <item>Jogging</item>
        <item>Running</item>
    </string-array>
    <string-array name="array_swimming_exercises">
        <item>--  --</item>
        <item>Freestyle</item>
        <item>Backstroke</item>
        <item>Breaststroke</item>
        <item>Butterfly</item>
    </string-array>

    <!-- Measurements -->
    <string-array name="measurement_distances">
        <item>--  --</item>
        <item>Yards</item>
        <item>Miles</item>
        <item>Meters</item>
        <item>Kilometers</item>
    </string-array>
    <string name="measurement_kilometers">Kilometers</string>
    <string name="measurement_meters">Meters</string>

    <!-- Distance 0 to 30 -->
    <string-array name="array_running_distances_whole">
        <item>0</item>
        <item>1</item><item>2</item><item>3</item><item>4</item><item>5</item>
        <item>6</item><item>7</item><item>8</item><item>9</item><item>10</item>
        <item>11</item><item>12</item><item>13</item><item>14</item><item>15</item>
        <item>16</item><item>17</item><item>18</item><item>19</item><item>20</item>
        <item>21</item><item>22</item><item>23</item><item>24</item><item>25</item>
        <item>26</item><item>27</item><item>28</item><item>29</item><item>30</item>
    </string-array>
    <string-array name="array_running_distances_fraction">
        <item>0</item>
        <item>1/4</item>
        <item>1/3</item>
        <item>1/2</item>
        <item>2/3</item>
        <item>3/4</item>
    </string-array>

    <string name="measurement_time">Time</string>
    <string-array name="measurement_times">
        <item>Hours</item>
        <item>Minutes</item>
        <item>Seconds</item>
    </string-array>

    <!-- Subtitles -->
    <string name="subtitles_nickname"><b>Nickname</b></string>
    <string name="subtitles_category"><b>Category</b></string>
    <string name="subtitles_exercise"><b>Exercise</b></string>
    <string name="subtitles_distance"><b>Distance</b></string>
    <string name="subtitles_add_distance"><b>+ Add Distance</b></string>
    <string name="subtitles_remove_distance">Remove Distance</string>
    <string name="subtitles_time"><b>Time</b></string>
    <string name="subtitles_add_time"><b>+ Add Time</b></string>
    <string name="subtitles_remove_time">Remove Time</string>
    <string name="subtitles_placeholder_value">Value</string>

    <!-- Texts -->
    <string name="text_hours">Hours</string>
    <string name="text_minutes">Minutes</string>
    <string name="text_seconds">Seconds</string>
    <string name="text_hours_letter">H</string>
    <string name="text_minutes_letter">M</string>
    <string name="text_seconds_letter">S</string>

    <!-- Buttons -->
    <string name="button_cancel">Cancel</string>
    <string name="button_next">Next</string>
    <string name="button_prev">Prev</string>

    <!-- Hints -->
    <string name="hint_nickname">Exercise Nickname</string>
</resources>
