<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_home"
        android:title="@string/action_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:tooltipText="@string/action_home"
        app:showAsAction="ifRoom">
    </item>
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom">
    </item>
    <item android:id="@+id/action_account"
        android:title="@string/action_account"
        android:icon="@drawable/ic_account_black_24dp"
        app:showAsAction="ifRoom">
    </item>
    <!-- Settings should always be displayed only in the overflow -->
    <item android:id="@+id/action_add_exercise"
        android:title="@string/action_add_exercise"
        android:icon="@drawable/ic_add_black_24dp"
        app:showAsAction="never">

    </item>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="never">
    </item>
    <!-- Logout should always be displayed only in the overflow -->
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never">
    </item>
</menu>