<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:background="@color/colorPrimaryBackground">

    <!-- Page Title -->
    <TextView
        android:id="@+id/title_add_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:text="@string/exercise_add_exercise_cardio"
        android:textSize="35sp"/>


    <TableLayout
        android:id="@+id/summary_table_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shrinkColumns="1"
        android:stretchColumns="2"
        app:layout_constraintTop_toBottomOf="@+id/title_add_exercise"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_cancel"
        app:layout_constraintLeft_toLeftOf="parent">

        <!-- Row 1 -->
        <TableRow>
            <!-- Exercise Nickname -->
            <TextView
                android:visibility="invisible"
                android:id="@+id/summary_textview_exercise_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:maxLines="1"
                android:paddingRight="65dp"
                android:paddingVertical="20dp"
                android:textAllCaps="false"
                android:text="@string/subtitles_nickname"
                android:textSize="19sp"/>
            <TextView
                android:visibility="invisible"
                android:id="@+id/summary_textview_exercise_nickname_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                app:layout_constraintLeft_toRightOf="@+id/summary_textview_exercise_nickname"
                android:textAllCaps="false"
                android:text="@string/subtitles_placeholder_value"
                android:textSize="19sp"/>
        </TableRow>

        <!-- Row 2 -->
        <TableRow>
            <!-- Exercise Name -->
            <TextView
                android:id="@+id/summary_textview_exercise_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:paddingVertical="20dp"
                android:textAllCaps="false"
                android:text="@string/subtitles_exercise"
                android:textSize="19sp"/>
            <TextView
                android:id="@+id/summary_textview_exercise_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textAllCaps="false"
                android:text="@string/subtitles_placeholder_value"
                android:textSize="19sp"/>
        </TableRow>

        <!-- Row 3 -->
        <TableRow>
            <!-- Exercise Distance and Unit-->
            <TextView
                android:visibility="invisible"
                android:id="@+id/summary_textview_exercise_distance_and_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:paddingVertical="20dp"
                android:textAllCaps="false"
                android:text="@string/subtitles_distance"
                android:textSize="19sp"/>
            <TextView
                android:visibility="invisible"
                android:id="@+id/summary_textview_exercise_distance_and_unit_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textAllCaps="false"
                android:text="@string/subtitles_placeholder_value"
                android:textSize="19sp"/>
        </TableRow>

        <!-- Row 4 -->
        <TableRow>
            <!-- Exercise Time -->
            <TextView
                android:visibility="invisible"
                android:id="@+id/summary_textview_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:paddingVertical="20dp"
                android:textAllCaps="false"
                android:text="@string/subtitles_time"
                android:textSize="19sp"/>
            <TextView
                android:visibility="invisible"
                android:id="@+id/summary_textview_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:textAllCaps="false"
                android:text="@string/subtitles_placeholder_value"
                android:textSize="19sp"/>
        </TableRow>
    </TableLayout>

    <!-- Cancel Button -->
    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/summary_table_layout"
        app:layout_constraintRight_toLeftOf="@+id/button_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAllCaps="false"
        android:text="@string/button_cancel"/>
    <!-- Submit Button -->
    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/summary_table_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/button_cancel"
        android:textAllCaps="false"
        android:text="@string/button_submit"/>

</androidx.constraintlayout.widget.ConstraintLayout>