<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:background="@color/colorPrimaryBackground">

    <!-- TITLE REGISTRATION -->
    <TextView
        android:id="@+id/title_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:textSize="50sp"
        android:text="@string/title_registration"/>

    <!-- TITLE EMAIL -->
    <TextView
        android:id="@+id/title_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title_registration"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/input_email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/title_email" />

    <!-- INPUT EMAIL -->
    <EditText
        android:id="@+id/input_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title_email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/title_userID"
        app:layout_constraintLeft_toLeftOf="parent"
        android:maxLength="35"
        android:inputType="textEmailAddress"/>

    <!-- TITLE USERID -->
    <TextView
        android:id="@+id/title_userID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/input_userID"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/title_userID"/>

    <!-- INPUT USERID -->
    <EditText
        android:id="@+id/input_userID"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title_userID"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/title_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:maxLength="15"
        android:inputType="text"/>

    <!-- TITLE PASSWORD -->
    <TextView
        android:id="@+id/title_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/input_userID"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/input_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/title_password"/>

    <!-- INPUT PASSWORD -->
    <EditText
        android:id="@+id/input_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/title_confirm_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:maxLength="16"
        android:inputType="textPassword"/>

    <!-- TITLE CONFIRM PASSWORD -->
    <TextView
        android:id="@+id/title_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/input_confirm_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/title_confirm_password"/>

    <!-- INPUT CONFIRM PASSWORD -->
    <EditText
        android:id="@+id/input_confirm_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/title_confirm_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_submit"
        app:layout_constraintLeft_toLeftOf="parent"
        android:maxLength="16"
        android:inputType="textPassword"/>

    <!-- BUTTON SUBMIT -->
    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/input_confirm_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/link_login"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/button_submit"/>

    <!-- LINK LOGIN -->
    <TextView
        android:id="@+id/link_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@+id/button_submit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/colorBlack_Fade"
        android:textAlignment="center"
        android:text="@string/link_login"/>

</androidx.constraintlayout.widget.ConstraintLayout>