<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Exercise SubTitle -->
    <TextView
        android:id="@+id/cardio_textview_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:text="@string/subtitles_exercise"/>

    <!-- Exercise Spinner -->
    <Spinner
        android:id="@+id/cardio_spinner_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintTop_toBottomOf="@+id/cardio_textview_exercise"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:entries="@array/array_running_exercises"
        android:dropDownWidth="wrap_content"
        android:spinnerMode="dropdown"/>

    <!-- Nickname -->

    <TextView
        android:id="@+id/cardio_textview_exercise_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:text="@string/subtitles_nickname"/>

    <EditText
        android:id="@+id/cardio_edittext_exercise_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:lines="1"
        android:singleLine="true"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintTop_toBottomOf="@id/cardio_textview_exercise_nickname"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/hint_nickname"
        android:maxLength="25"/>

    <!-- Next Button -->
    <Button
        android:id="@+id/cardio_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAllCaps="false"
        android:text="@string/button_next"/>

    <FrameLayout
        android:id="@+id/fragment_number_picker_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>