<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="20dp"
    android:paddingVertical="15dp"
    android:background="@color/colorPrimaryBackground">

    <!-- Page Title -->
    <TextView
        android:id="@+id/title_add_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:text="@string/exercise_add_exercise_cardio"
        android:textSize="35sp"/>


    <!-- Distance-Pickers-Displayer Button -->
    <TextView
        android:id="@+id/number_pickers_distance_displayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/title_add_exercise"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/subtitles_add_distance"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/number_pickers_time_displayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/subtitles_add_time"
        android:textAllCaps="false"/>

    <!-- Distance Pickers -->
    <NumberPicker
        android:visibility="gone"
        android:id="@+id/number_picker_whole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/title_add_exercise"
        app:layout_constraintRight_toLeftOf="@+id/number_picker_fraction"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <NumberPicker
        android:visibility="gone"
        android:id="@+id/number_picker_fraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/title_add_exercise"
        app:layout_constraintRight_toLeftOf="@+id/number_picker_unit"
        app:layout_constraintLeft_toRightOf="@+id/number_picker_whole"/>

    <NumberPicker
        android:visibility="gone"
        android:id="@+id/number_picker_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/title_add_exercise"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/number_picker_fraction"/>

    <!-- Time Pickers -->
    <NumberPicker
        android:visibility="gone"
        android:id="@+id/number_picker_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/number_picker_whole"
        app:layout_constraintRight_toLeftOf="@+id/number_picker_minutes"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <NumberPicker
        android:visibility="gone"
        android:id="@+id/number_picker_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/number_picker_whole"
        app:layout_constraintRight_toLeftOf="@+id/number_picker_seconds"
        app:layout_constraintLeft_toRightOf="@+id/number_picker_hours"/>

    <NumberPicker
        android:visibility="gone"
        android:id="@+id/number_picker_seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/number_picker_whole"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/number_picker_minutes"/>

    <!-- Bottom Navigation Buttons -->

    <Button
        android:id="@+id/cardio_button_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAllCaps="false"
        android:text="@string/button_prev"/>

    <Button
        android:id="@+id/cardio_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAllCaps="false"
        android:text="@string/button_next"/>

</androidx.constraintlayout.widget.ConstraintLayout>